# apple-local-organizer

./: .gitignore  LICENSE  PUBLISHING.md  README.md  apple_fm_summary_tool.py
.github/workflows/: ci.yml
core/: pyproject.toml
core/src/ailocaltools/: __init__.py  bridge.py  cli.py  environment.py  history.py  ingest.py  models.py  organizer.py  summary.py  validation.py
core/tests/: test_bridge.py  test_environment.py  test_history.py  test_organizer.py  test_release_scripts.py  test_summary.py  test_validation.py
docs/: local-ai-playground.md
fixtures/: generate_fixtures.py
fixtures/device_samples/: README.md
release/: README.md  build_app.sh  notarize_app.sh  package_dmg.sh  prepare_github_release.sh  sign_app.sh  staple_dmg.sh
scripts/: public_release_check.sh  run_local_mlx_llm.sh  run_toy_mlx_ai.py
shell/: Package.swift
shell/Sources/AppleLocalOrganizerApp/: AppDelegate.swift  AppModels.swift  AppState.swift  AppleLocalOrganizerApp.swift  DirectoryEventStream.swift  PythonBridge.swift  TextServiceProvider.swift  Views.swift
shell/Sources/AppleLocalOrganizerApp/Resources/: bridge_runner.py
shell/Tests/AppleLocalOrganizerAppTests/: AppleLocalOrganizerAppTests.swift
validation/: manual-notes-template.md
