[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-local-organizer-core"
version = "0.1.0"
description = "Local summarizer and Finder organizer for Apple Intelligence workflows."
readme = "../README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
apple = ["apple-fm-sdk"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
